# template-data-science

./: README.md  cookiecutter.json
{{cookiecutter.__directory_name}}/: Makefile  README.md  dvc.yaml  pyproject.toml
{{cookiecutter.__directory_name}}/config/: main.yaml
{{cookiecutter.__directory_name}}/src/: 01_process.py  02_train.py
