[tool.poetry]
name = "{{ cookiecutter.__directory_name }}"
version = "0.1.0"
description = ""
authors = ["{{ cookiecutter.author_name }}"]

[tool.poetry.dependencies]
python = "{{ cookiecutter.compatible_python_versions }}"
hydra-core = "^1.1.1"
dvc = "^3.59.1"

[tool.poetry.dev-dependencies]
jupyterlab = "^4.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
